<resources>
    <string name="app_name">BlackJack</string>
    <string name="navOpen">Nav open</string>
    <string name="navClose">Nav close</string>
    <string name="newGame">New Game</string>
    <string name="howToPlayHeader">How to Play BlackJack</string>
    <string name="tutorialHelpText">"Rules of Blackjack:\n\n"
                "1. The goal is to beat the dealer by having a hand value closer to 21 without going over.\n"
                "2. Number cards are worth their face value; face cards are worth 10 points; and an Ace can be worth 1 or 11.\n"
                "3. Players are dealt two cards, and they can choose to 'Hit' to get another card or 'Stand' to keep their current hand.\n"
                "4. 'Double Down' allows players to double their initial bet and receive only one additional card.\n"
                "5. The dealer must hit until their hand value is 17 or higher.\n"
                "6. If a player's hand exceeds 21, they bust and lose the round.\n"
                "7. The player with a hand value closest to 21 without going over wins.\n"
                "8. Chip totals are used for betting, and the game keeps track of each player's total chips.\n"</string>
    <string name="bettingHelpText">Rules of Betting in Blackjack:\n\n
                1. Player must bet before they receive their cards.\n
        		2. Player must bet above 10 chips and below 50,000 chips.\n
                3. If the player doubles down the bet for that hand is doubled.\n
        		4. If the player has blackjack, they receive a payout of 3:2 on their original bet.\n
                5. If the player wins, they receive a payout of 1:1 on their original bet.\n </string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="casinoMode">Casino Mode</string>
    <string name="homeMenuItem">Home</string>
    <string name="gameMenuItem">Game</string>
    <string name="howToPlayMenuItem">How To Play</string>
    <string name="settingsMenuItem">Settings</string>
    <string name="addMoreChipsMenuItem">Add More Chips</string>
    <string name="textSize">Text Size</string>
    <string name="hit">Hit</string>
    <string name="stand">Stand</string>
    <string name="doubleDown">Double Down</string>


</resources>