<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/newGameAfterGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startNewGame"
        android:text="New Game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="68dp"
        android:onClick="hit"
        android:text="@string/hit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameAfterGameBtn" />

    <Button
        android:id="@+id/standBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="stand"
        android:text="@string/stand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/doubleDownBtn"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toEndOf="@+id/hitBtn"
        app:layout_constraintTop_toBottomOf="@+id/newGameAfterGameBtn"
        app:layout_constraintVertical_bias="0.232" />

    <Button
        android:id="@+id/doubleDownBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:onClick="doubleDown"
        android:text="@string/doubleDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameAfterGameBtn" />

    <LinearLayout
        android:id="@+id/playerCards"
        android:layout_width="400dp"
        android:layout_height="223dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/dealerCards"
        android:layout_width="400dp"
        android:layout_height="223dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>